stock-forecaster/backend/venv311/Library/include/mkl_lapack_omp_offload.h

void cgetrf_batch(const MKL_INT* m, const MKL_INT* n, MKL_Complex8** a, const MKL_INT* lda, MKL_INT** ipiv,
                  const MKL_INT* group_count, const MKL_INT* group_sizes, MKL_INT* info) NOTHROW;
void dgetrf_batch(const MKL_INT* m, const MKL_INT* n, double** a, const MKL_INT* lda, MKL_INT** ipiv,
                  const MKL_INT* group_count, const MKL_INT* group_sizes, MKL_INT* info) NOTHROW;
void sgetrf_batch(const MKL_INT* m, const MKL_INT* n, float** a, const MKL_INT* lda, MKL_INT** ipiv,
                  const MKL_INT* group_count, const MKL_INT* group_sizes, MKL_INT* info) NOTHROW;
void zgetrf_batch(const MKL_INT* m, const MKL_INT* n, MKL_Complex16** a, const MKL_INT* lda, MKL_INT** ipiv,
                  const MKL_INT* group_count, const MKL_INT* group_sizes, MKL_INT* info) NOTHROW;
void cgetrf(const MKL_INT* m, const MKL_INT* n, MKL_Complex8* a, const MKL_INT* lda, MKL_INT* ipiv,
            MKL_INT* info) NOTHROW;
void dgesvda_batch(const MKL_INT* iparm, MKL_INT* irank, const MKL_INT* m, const MKL_INT* n, double* a,
                   const MKL_INT* lda, const MKL_INT* stride_a, double* s, const MKL_INT* stride_s, double* u,
                   const MKL_INT* ldu, const MKL_INT* stride_u, double* vt, const MKL_INT* ldvt,
                   const MKL_INT* stride_vt, const double* tolerance, double* residual, double* work,
                   const MKL_INT* lwork, const MKL_INT* batch_size, MKL_INT* info) NOTHROW;
void dgetrf(const MKL_INT* m, const MKL_INT* n, double* a, const MKL_INT* lda, MKL_INT* ipiv, MKL_INT* info) NOTHROW;
void sgesvda_batch(const MKL_INT* iparm, MKL_INT* irank, const MKL_INT* m, const MKL_INT* n, float* a,
                   const MKL_INT* lda, const MKL_INT* stride_a, float* s, const MKL_INT* stride_s, float* u,
                   const MKL_INT* ldu, const MKL_INT* stride_u, float* vt, const MKL_INT* ldvt,
                   const MKL_INT* stride_vt, const float* tolerance, float* residual, float* work, const MKL_INT* lwork,
                   const MKL_INT* batch_size, MKL_INT* info) NOTHROW;
void sgetrf(const MKL_INT* m, const MKL_INT* n, float* a, const MKL_INT* lda, MKL_INT* ipiv, MKL_INT* info) NOTHROW;
void zgesvda_batch(const MKL_INT* iparm, MKL_INT* irank, const MKL_INT* m, const MKL_INT* n, MKL_Complex16* a,
                   const MKL_INT* lda, const MKL_INT* stride_a, double* s, const MKL_INT* stride_s, MKL_Complex16* u,
                   const MKL_INT* ldu, const MKL_INT* stride_u, MKL_Complex16* vt, const MKL_INT* ldvt,
                   const MKL_INT* stride_vt, const double* tolerance, double* residual, MKL_Complex16* work,
                   const MKL_INT* lwork, const MKL_INT* batch_size, MKL_INT* info) NOTHROW;
void zgetrf(const MKL_INT* m, const MKL_INT* n, MKL_Complex16* a, const MKL_INT* lda, MKL_INT* ipiv,
            MKL_INT* info) NOTHROW;
void cgetrfnp_batch(const MKL_INT* m, const MKL_INT* n, MKL_Complex8** a, const MKL_INT* lda,
                    const MKL_INT* group_count, const MKL_INT* group_sizes, MKL_INT* info) NOTHROW;
void dgetrfnp_batch(const MKL_INT* m, const MKL_INT* n, double** a, const MKL_INT* lda, const MKL_INT* group_count,
                    const MKL_INT* group_sizes, MKL_INT* info) NOTHROW;
void sgetrfnp_batch(const MKL_INT* m, const MKL_INT* n, float** a, const MKL_INT* lda, const MKL_INT* group_count,
                    const MKL_INT* group_sizes, MKL_INT* info) NOTHROW;
void zgetrfnp_batch(const MKL_INT* m, const MKL_INT* n, MKL_Complex16** a, const MKL_INT* lda,
                    const MKL_INT* group_count, const MKL_INT* group_sizes, MKL_INT* info) NOTHROW;
void cgetri_oop_batch(const MKL_INT *n, const MKL_Complex8 **a, const MKL_INT *lda, const MKL_INT **ipiv, MKL_Complex8 **ainv, const MKL_INT *ldainv, const MKL_INT *group_count, const MKL_INT *group_size, MKL_INT *info) NOTHROW;