stock-forecaster/backend/venv311/Library/include/mkl_lapack_omp_offload_lp64.f90


      subroutine cgetrf(m, n, a, lda, ipiv, info) bind(c)
      integer, intent(in) :: m
      integer, intent(in) :: n
      integer, intent(in) :: lda
      integer, intent(out) :: info
      complex*8, intent(inout) :: a(lda,*)
      integer, intent(out) :: ipiv(*)
!$omp declare variant (cgetrf:mkl_lapack_cgetrf_omp_offload_lp64) match(construct={dispatch}, device={arch(gen)}) append_args(interop(prefer_type("sycl"), targetsync)) adjust_args(need_device_addr:a,ipiv,info)
      end subroutine cgetrf

      subroutine dgesvda_batch(iparm, irank, m, n, a, lda, stride_a, s,&
                               stride_s, u, ldu, stride_u, vt, ldvt,   &
                               stride_vt, tolerance, residual, work,   &
                               lwork, batch_size, info) bind(c)
      integer, intent(in) :: iparm
      integer, intent(inout) :: irank
      integer, intent(in) :: m
      integer, intent(in) :: n
      integer, intent(in) :: lda
      integer, intent(in) :: stride_a
      integer, intent(in) :: stride_s
      integer, intent(in) :: ldu
      integer, intent(in) :: stride_u
      integer, intent(in) :: ldvt
      integer, intent(in) :: stride_vt
      double precision, intent(in) :: tolerance
      integer, intent(in) :: lwork
      integer, intent(in) :: batch_size
      double precision, intent(inout) :: a(stride_a,*)
      double precision, intent(out) :: s(stride_s,*)
      double precision, intent(out) :: u(stride_u,*)
      double precision, intent(out) :: vt(stride_u,*)
      double precision, intent(out) :: residual(*)
      double precision, intent(out) :: work(*)
      integer, intent(out) :: info(*)
!$omp declare variant (mkl_lapack_dgesvda_batch_omp_offload_lp64) match(construct={dispatch}, device={arch(gen)}) append_args(interop(prefer_type("sycl"), targetsync)) adjust_args(need_device_addr:irank,a,s,u,vt,residual,work,info)
      end subroutine dgesvda_batch

      subroutine dgetrf(m, n, a, lda, ipiv, info) bind(c)
      integer, intent(in) :: m
      integer, intent(in) :: n
      integer, intent(in) :: lda
      integer, intent(out) :: info
      double precision, intent(inout) :: a(lda,*)
      integer, intent(out) :: ipiv(*)
!$omp declare variant (dgetrf:mkl_lapack_dgetrf_omp_offload_lp64) match(construct={dispatch}, device={arch(gen)}) append_args(interop(prefer_type("sycl"), targetsync)) adjust_args(need_device_addr:a,ipiv,info)
      end subroutine dgetrf

      subroutine sgesvda_batch(iparm, irank, m, n, a, lda, stride_a, s,&
                               stride_s, u, ldu, stride_u, vt, ldvt,   &
                               stride_vt, tolerance, residual, work,   &
                               lwork, batch_size, info) bind(c)
      integer, intent(in) :: iparm
      integer, intent(inout) :: irank
      integer, intent(in) :: m
      integer, intent(in) :: n
      integer, intent(in) :: lda
      integer, intent(in) :: stride_a
      integer, intent(in) :: stride_s
      integer, intent(in) :: ldu
      integer, intent(in) :: stride_u
      integer, intent(in) :: ldvt
      integer, intent(in) :: stride_vt
      real, intent(in) :: tolerance
      integer, intent(in) :: lwork
      integer, intent(in) :: batch_size
      real, intent(inout) :: a(stride_a,*)
      real, intent(out) :: s(stride_s,*)
      real, intent(out) :: u(stride_u,*)
      real, intent(out) :: vt(stride_u,*)
      real, intent(out) :: residual(*)
      real, intent(out) :: work(*)
      integer, intent(out) :: info(*)
!$omp declare variant (mkl_lapack_sgesvda_batch_omp_offload_lp64) match(construct={dispatch}, device={arch(gen)}) append_args(interop(prefer_type("sycl"), targetsync)) adjust_args(need_device_addr:irank,a,s,u,vt,residual,work,info)
      end subroutine sgesvda_batch

      subroutine sgetrf(m, n, a, lda, ipiv, info) bind(c)
      integer, intent(in) :: m
      integer, intent(in) :: n
      integer, intent(in) :: lda
      integer, intent(out) :: info
      real, intent(inout) :: a(lda,*)
      integer, intent(out) :: ipiv(*)
!$omp declare variant (sgetrf:mkl_lapack_sgetrf_omp_offload_lp64) match(construct={dispatch}, device={arch(gen)}) append_args(interop(prefer_type("sycl"), targetsync)) adjust_args(need_device_addr:a,ipiv,info)
      end subroutine sgetrf

      subroutine zgesvda_batch(iparm, irank, m, n, a, lda, stride_a, s,&
                               stride_s, u, ldu, stride_u, vt, ldvt,   &
                               stride_vt, tolerance, residual, work,   &
                               lwork, batch_size, info) bind(c)
      integer, intent(in) :: iparm
      integer, intent(inout) :: irank
      integer, intent(in) :: m
      integer, intent(in) :: n
      integer, intent(in) :: lda
      integer, intent(in) :: stride_a
      integer, intent(in) :: stride_s
      integer, intent(in) :: ldu
      integer, intent(in) :: stride_u
      integer, intent(in) :: ldvt
      integer, intent(in) :: stride_vt
      double precision, intent(in) :: tolerance
      integer, intent(in) :: lwork
      integer, intent(in) :: batch_size
      complex*16, intent(inout) :: a(stride_a,*)
      double precision, intent(out) :: s(stride_s,*)
      complex*16, intent(out) :: u(stride_u,*)
      complex*16, intent(out) :: vt(stride_u,*)
      double precision, intent(out) :: residual(*)
      complex*16, intent(out) :: work(*)
      integer, intent(out) :: info(*)
!$omp declare variant (mkl_lapack_zgesvda_batch_omp_offload_lp64) match(construct={dispatch}, device={arch(gen)}) append_args(interop(prefer_type("sycl"), targetsync)) adjust_args(need_device_addr:irank,a,s,u,vt,residual,work,info)
      end subroutine zgesvda_batch

      subroutine zgetrf(m, n, a, lda, ipiv, info) bind(c)
      integer, intent(in) :: m
      integer, intent(in) :: n
      integer, intent(in) :: lda
      integer, intent(out) :: info
      complex*16, intent(inout) :: a(lda,*)
      integer, intent(out) :: ipiv(*)
!$omp declare variant (zgetrf:mkl_lapack_zgetrf_omp_offload_lp64) match(construct={dispatch}, device={arch(gen)}) append_args(interop(prefer_type("sycl"), targetsync)) adjust_args(need_device_addr:a,ipiv,info)
      end subroutine zgetrf

      subroutine cgetrf_batch(m, n, a, lda, ipiv, &
                              group_count, group_size, info) bind(c)
      use, intrinsic :: iso_c_binding
      integer, intent(in) :: m(*), n(*), lda(*)
      integer, intent(in) :: group_size(*), group_count
      integer(KIND=C_INTPTR_T), intent(inout) :: a(*)
      integer(KIND=C_INTPTR_T), intent(out) :: ipiv(*)
      integer, intent(out) :: info(*)
!$omp declare variant (cgetrf_batch:mkl_lapack_cgetrf_batch_omp_offload_lp64) match(construct={dispatch}, device={arch(gen)}) append_args(interop(prefer_type("sycl"), targetsync)) adjust_args(need_device_addr:a,ipiv,info)
      end subroutine cgetrf_batch

      subroutine dgetrf_batch(m, n, a, lda, ipiv, &
                              group_count, group_size, info) bind(c)
      use, intrinsic :: iso_c_binding
      integer, intent(in) :: m(*), n(*), lda(*)
      integer, intent(in) :: group_size(*), group_count
      integer(KIND=C_INTPTR_T), intent(inout) :: a(*)
      integer(KIND=C_INTPTR_T), intent(out) :: ipiv(*)
      integer, intent(out) :: info(*)
!$omp declare variant (dgetrf_batch:mkl_lapack_dgetrf_batch_omp_offload_lp64) match(construct={dispatch}, device={arch(gen)}) append_args(interop(prefer_type("sycl"), targetsync)) adjust_args(need_device_addr:a,ipiv,info)
      end subroutine dgetrf_batch

      subroutine sgetrf_batch(m, n, a, lda, ipiv, &
                              group_count, group_size, info) bind(c)
      use, intrinsic :: iso_c_binding
      integer, intent(in) :: m(*), n(*), lda(*)
      integer, intent(in) :: group_size(*), group_count
      integer(KIND=C_INTPTR_T), intent(inout) :: a(*)
      integer(KIND=C_INTPTR_T), intent(out) :: ipiv(*)
      integer, intent(out) :: info(*)
!$omp declare variant (sgetrf_batch:mkl_lapack_sgetrf_batch_omp_offload_lp64) match(construct={dispatch}, device={arch(gen)}) append_args(interop(prefer_type("sycl"), targetsync)) adjust_args(need_device_addr:a,ipiv,info)
      end subroutine sgetrf_batch

      subroutine zgetrf_batch(m, n, a, lda, ipiv, &
                              group_count, group_size, info) bind(c)
      use, intrinsic :: iso_c_binding
      integer, intent(in) :: m(*), n(*), lda(*)
      integer, intent(in) :: group_size(*), group_count
      integer(KIND=C_INTPTR_T), intent(inout) :: a(*)
      integer(KIND=C_INTPTR_T), intent(out) :: ipiv(*)
      integer, intent(out) :: info(*)
!$omp declare variant (zgetrf_batch:mkl_lapack_zgetrf_batch_omp_offload_lp64) match(construct={dispatch}, device={arch(gen)}) append_args(interop(prefer_type("sycl"), targetsync)) adjust_args(need_device_addr:a,ipiv,info)
      end subroutine zgetrf_batch

      subroutine cgetrfnp_batch(m, n, a, lda, &
                                group_count, group_size, info) bind(c)
      use, intrinsic :: iso_c_binding
      integer, intent(in) :: m(*), n(*), lda(*)
      integer, intent(in) :: group_size(*), group_count
      integer(KIND=C_INTPTR_T), intent(inout) :: a(*)
      integer, intent(out) :: info(*)
!$omp declare variant (cgetrfnp_batch:mkl_lapack_cgetrfnp_batch_omp_offload_lp64) match(construct={dispatch}, device={arch(gen)}) append_args(interop(prefer_type("sycl"), targetsync)) adjust_args(need_device_addr:a,info)
      end subroutine cgetrfnp_batch

      subroutine dgetrfnp_batch(m, n, a, lda, &
                                group_count, group_size, info) bind(c)
      use, intrinsic :: iso_c_binding
      integer, intent(in) :: m(*), n(*), lda(*)
      integer, intent(in) :: group_size(*), group_count
      integer(KIND=C_INTPTR_T), intent(inout) :: a(*)
      integer, intent(out) :: info(*)
!$omp declare variant (dgetrfnp_batch:mkl_lapack_dgetrfnp_batch_omp_offload_lp64) match(construct={dispatch}, device={arch(gen)}) append_args(interop(prefer_type("sycl"), targetsync)) adjust_args(need_device_addr:a,info)
      end subroutine dgetrfnp_batch

      subroutine sgetrfnp_batch(m, n, a, lda, &
                                group_count, group_size, info) bind(c)
      use, intrinsic :: iso_c_binding
      integer, intent(in) :: m(*), n(*), lda(*)
      integer, intent(in) :: group_size(*), group_count
      integer(KIND=C_INTPTR_T), intent(inout) :: a(*)
      integer, intent(out) :: info(*)
!$omp declare variant (sgetrfnp_batch:mkl_lapack_sgetrfnp_batch_omp_offload_lp64) match(construct={dispatch}, device={arch(gen)}) append_args(interop(prefer_type("sycl"), targetsync)) adjust_args(need_device_addr:a,info)
      end subroutine sgetrfnp_batch

      subroutine zgetrfnp_batch(m, n, a, lda, &
                               group_count, group_size, info) bind(c)
      use, intrinsic :: iso_c_binding
      integer, intent(in) :: m(*), n(*), lda(*)
      integer, intent(in) :: group_size(*), group_count
      integer(KIND=C_INTPTR_T), intent(inout) :: a(*)
      integer, intent(out) :: info(*)
!$omp declare variant (zgetrfnp_batch:mkl_lapack_zgetrfnp_batch_omp_offload_lp64) match(construct={dispatch}, device={arch(gen)}) append_args(interop(prefer_type("sycl"), targetsync)) adjust_args(need_device_addr:a,info)
      end subroutine zgetrfnp_batch

      subroutine cgetri_oop_batch(n, a, lda, ipiv, ainv, ldainv, &
                              group_count, group_size, info) bind(c)
      use, intrinsic :: iso_c_binding
      integer, intent(in) :: n(*), lda(*), ldainv(*)
      integer, intent(in) :: group_size(*), group_count
      integer(KIND=C_INTPTR_T), intent(in) :: a(*), ipiv(*)
      integer(KIND=C_INTPTR_T), intent(out) :: ainv(*)
      integer, intent(out) :: info(*)
!$omp declare variant (cgetri_oop_batch:mkl_lapack_cgetri_oop_batch_omp_offload_lp64) match(construct={dispatch}, device={arch(gen)}) append_args(interop(prefer_type("sycl"), targetsync)) adjust_args(need_device_addr:a,ipiv,ainv,info)
      end subroutine cgetri_oop_batch
